# stm32_simple_sdk

./: .config  .config.old  .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  component.cmake  version.h  version.h.in
components/application/: CMakeLists.txt  Doxyfile
components/application/embed_files/: embed_file_b.hex
components/application/sources/: main.c
components/application/static_libs/lib_a/include/: lib_a.h
components/application/static_libs/lib_b/include/: lib_b.h
components/assert/: CMakeLists.txt  Doxyfile  Kconfig
components/assert/include/: assert.h
components/assert/sources/: assert.c
components/logger/: CMakeLists.txt  Doxyfile  Kconfig
components/logger/include/: logger.h
components/logger/sources/: logger.c
components/system/: CMakeLists.txt  Doxyfile
components/system/bsp/include/: bsp.h
components/system/bsp/sources/: bsp.c
components/system/hal/hal_usart_log/include/: hal_usart_log.h
components/system/hal/hal_usart_log/sources/: hal_usart_log.c
components/system/mcu/core/linker_script/: STM32F411RETX_FLASH.ld
components/system/mcu/core/system_clock/include/: system_clock.h
components/system/mcu/core/system_clock/sources/: system_clock.c
components/system/mcu/core/system_interrupts/include/: system_interrupts.h
components/system/mcu/core/system_interrupts/sources/: system_interrupts.c
components/system/mcu/periphery/usart_log/include/: usart_log.h
components/system/mcu/periphery/usart_log/sources/: usart_log.c
components/system/mcu/stm32f4xx_ll/include/: stm32f4xx_ll_utils.h
configuration/: autoconf.h  kconfig.cmake
configuration/general/: Kconfig
configuration/scripts/: kconfig.py  menuconfig.py
configuration/settings_of_build/: Kconfig  Kconfig_g++_compiler.in  Kconfig_g++_linker.in  Kconfig_gcc_assembler.in  Kconfig_gcc_compiler.in  Kconfig_gcc_linker.in  Kconfig_mcu.in
scripts/: build.py  clean.py  doc.py
